plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'mtvs.onvision'
version = '0.0.1-SNAPSHOT'
description = 'vision'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    //위치 이력 배치 INSERT용 JdbcTemplate. Boot 4에서 data-jpa가 더는 끌고 오지 않는다
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'

    //valid
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    //jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    //websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-restclient'
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    runtimeOnly 'org.flywaydb:flyway-database-postgresql'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    //swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'

    //S3
    implementation 'software.amazon.awssdk:s3:2.45.1'
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:4.0.2'

    //firebase
    implementation 'com.google.firebase:firebase-admin:9.10.0'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'
    //testcontainers - Boot BOM이 버전을 관리하지 않을 수 있어 명시한다
    testImplementation 'org.testcontainers:postgresql:1.21.3'
}

tasks.named('test') {
    useJUnitPlatform()
}
